git commit -m "Added Support Page and Updated Home and Products Pages" git push origin main

--- a/Home/index.html
+++ b/Home/index.html
@@ -15,7 +15,7 @@
 
 <div class="header">
   <div class="logo">
-    <img src="/BWWlogo.png" alt="Ben's Whisk & Wonder Logo" id="logoimg">
+    <img src="" alt="Ben's Whisk & Wonder Logo" id="logoimg">
   </div>
   <h1>Ben's Whisk & Wonder</h1></div>
 
@@ -23,11 +23,11 @@
 <div class="menu">
  <nav>
   <ul>
-  <li> <a href="index.html">Home</a></li>
+  <li> <a href="/Ben-s-Whisk-And-Wonder/Home/index.html">Home</a></li>
 
 <div class="dropdown">
 
-  <li> <a href="products.html">Products</a></li>
+  <li> <a href="/Ben-s-Whisk-And-Wonder/Products/">Products</a></li>
 
   <div class="dropdown-content">
    <li> <a href="/Products/Birthdays/birthdays.html">Birthdays</a></li>
@@ -41,24 +41,20 @@
   </div>
   
   <div class="dropdown">
-  <li> <a href="about.html">About</a></li>
-
+  <li> <a href="/Ben-s-Whisk-And-Wonder/About Us/story.html">About</a></li>
+</div>
   <div class="dropdown-content">
    <li> <a href="/About Us/story.html">Our Story</a></li>
-    <li> <a href="/About Us/careers.html">Careers</a></li>
-  </div>
   </div>
 
  <div class="dropdown">
-  <li> <a href="support.html">Support</a></li>
+  <li> <a href="/Ben-s-Whisk-And-Wonder/Support/support.html">FAQ's</a></li>
   <div class="dropdown-content">
-   <li> <a href="faq.html">FAQ</a></li>
-   <li> <a href="shipping.html">Shipping & Returns</a></li>
   </div>
 
 </div>
 
-  <li> <a href="contact.html">Contact</a></li>
+  <li> <a href="/Ben-s-Whisk-And-Wonder/Contact us/contact.html">Contact</a></li>
 
    <li> <input type="text" id="search" name="search" placeholder="Search..."></li>
 
