--- a/Products/Kids/kids.html
+++ b/Products/Kids/kids.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
-    <link rel="stylesheet" href="products.css">
+    <link rel="stylesheet" href="/Ben-s-Whisk-And-Wonder/Products/products.css">
     <link href='https://fonts.googleapis.com/css?family=Lora' rel='stylesheet'>
 
     <title>Ben's Whisk & Wonder</title>
@@ -26,12 +26,12 @@
 
   <li> <a href="/Products/products.html">Products</a></li>
   <div class="dropdown-content">
-   <li> <a href="/Products/Birthdays/birthdays.html">Birthdays</a></li>
-    <li> <a href="/Products/Anniversaries/anniversaries.html">Anniversaries</a></li>
-    <li> <a href="/Products/Weddings/weddings.html">Weddings</a></li>
-    <li> <a href="/Products/Graduation/graduation.html">Graduations</a></li>
-    <li> <a href="/Products/Kids/kids.html">Kids</a></li>
-    <li> <a href="/Products/Other/other.html">Other</a></li>
+   <li> <a href="/Ben-s-Whisk-And-Wonder/Products/Birthdays/birthdays.html">Birthdays</a></li>
+    <li> <a href="/Ben-s-Whisk-And-Wonder/Products/Anniversaries/anniversaries.html">Anniversaries</a></li>
+    <li> <a href="/Ben-s-Whisk-And-Wonder/Products/Weddings/weddings.html">Weddings</a></li>
+    <li> <a href="/Ben-s-Whisk-And-Wonder/Products/Graduations/graduations.html">Graduations</a></li>
+    <li> <a href="/Ben-s-Whisk-And-Wonder/Products/Kids/kids.html">Kids</a></li>
+    <li> <a href="/Ben-s-Whisk-And-Wonder/Products/Other/other.html">Other</a></li>
   </div>
 
   </div>
@@ -217,9 +217,41 @@
 </div>
 
 
-<div class="footer">
-    <p>Ben's Whisk & Wonder © 2025</p>
-</div>
+<footer class="footer">
+  <div class="footer-container">
+
+    <!-- Logo -->
+    <div class="footer-section logo-section">
+      <img src="/Ben-s-Whisk-And-Wonder/BBWLogo1.png" alt="Ben's Whisk & Wonder Logo">
+    </div>
+
+   <!-- Social Media Links -->
+    <div class="footer-section">
+    <h3>Follow our socials:</h3>
+      <ul class="socials">
+        <li><a href="#"><img src="/Ben-s-Whisk-And-Wonder/Instagram.png" alt="Instagram"></a></li>
+        <li><a href="#"><img src="/Ben-s-Whisk-And-Wonder/Twitter.png" alt="Twitter"></a></li>
+        <li><a href="#"><img src="/Ben-s-Whisk-And-Wonder/Facebook.png" alt="Facebook"></a></li>
+      </ul>    
+      </div>
+
+    <!-- Helpful Info -->
+    <div class="footer-section">
+      <h3>Helpful Information</h3>
+      <ul class="foot-list">
+        <li><a href="/Ben-s-Whisk-And-Wonder/Support/support.html">Cake Decor Tips</a></li>
+        <li><a href="/Ben-s-Whisk-And-Wonder/Support/support.html">Baking Tips</a></li>
+        <li><a href="/Ben-s-Whisk-And-Wonder/Support/support.html">How to Pay</a></li>
+        <li><a href="/Ben-s-Whisk-And-Wonder/Contact us/contact.html">Contact</a></li>
+      </ul>
+    </div>
+
+  </div>
+
+  <p class="copyright">
+    &copy; 2024 Ben's Whisk &amp; Wonder. All rights reserved.
+  </p>
+</footer>
 
 
 
