--- a/Home/index.html
+++ b/Home/index.html
@@ -15,7 +15,7 @@
 
 <div class="header">
   <div class="logo">
-    <img src="" alt="Ben's Whisk & Wonder Logo" id="logoimg">
+    <img src="/Ben-s-Whisk-And-Wonder/BBWLogo12.png" alt="Ben's Whisk & Wonder Logo" id="logoimg">
   </div>
   <h1>Ben's Whisk & Wonder</h1></div>
 
@@ -127,16 +127,13 @@
 </div>
 <!--gallery items ends here-->
 
+<!-- Promo section starts here -->
 <div class="promo">
 <h1>Festive Specials! Get 30% off today!</h1>
 <p>Christmas is around the corner! We have a special selection of festive cakes and treats to make your holiday season even more delightful!!!</p>
 </div>
 
-</div>
-<!--facts ends here-->
-
-<div class="footer">
-  <div class="flex-container" id="review-section">
+ <div class="flex-container" id="review-section">
 
     <div><img src="reviewcake.jpeg">
     </div>
@@ -184,9 +181,43 @@
 
   </div>
 
-  <hr>
-    <p>&copy; 2024 Ben's Whisk & Wonder. All rights reserved.</p>
 </div>
-    
+<!--facts ends here-->
+<hr>
+
+<footer class="footer">
+  <div class="flex-container">
+
+    <!-- Logo -->
+    <div class="footer-section">
+      <img src="/Ben-s-Whisk-And-Wonder/BBWLogo1.png" alt="Ben's Whisk & Wonder Logo">
+    </div>
+
+    <!-- Socials -->
+    <div class="footer-section">
+      <h3>Socials</h3>
+      <ul class="foot-list">
+        <li><a href="#">Facebook</a></li>
+        <li><a href="#">Twitter</a></li>
+      </ul>
+    </div>
+
+    <!-- Helpful Info -->
+    <div class="footer-section">
+      <h3>Helpful Information</h3>
+      <ul class="foot-list">
+        <li><a href="/Ben-s-Whisk-And-Wonder/Support/support.html">Cake Decor Tips</a></li>
+        <li><a href="/Ben-s-Whisk-And-Wonder/Support/support.html">Baking Tips</a></li>
+        <li><a href="/Ben-s-Whisk-And-Wonder/Support/support.html">How to Pay</a></li>
+        <li><a href="/Ben-s-Whisk-And-Wonder/Contact us/contact.html">Contact</a></li>
+      </ul>
+    </div>
+
+  </div>
+
+  <p class="copyright">
+    &copy; 2024 Ben's Whisk &amp; Wonder. All rights reserved.
+  </p>
+</footer>
 </body>
 </html>
