--- a/Products/Graduation/graduations.html
+++ b/Products/Graduation/graduations.html
@@ -64,11 +64,11 @@
                 ============================ -->
 
                 <div class="list">
-                    <ul>/Ben-s-Whisk-And-Wonder/index.html
+                    <ul>
                         <li><a href="/Ben-s-Whisk-And-Wonder/Home/index.html">Home</a></li>
 
                         <div class="dropdown">
-                            <li><a href="/Ben-s-Whisk-And-Wonder/Products/">Products</a></li>
+                            <li><a hre="#">Products</a></li>
                             <div class="dropdown-content">
                                 <li><a href="/Ben-s-Whisk-And-Wonder/Products/Birthdays/birthdays.html">Birthdays</a></li>
                                 <li><a href="/Ben-s-Whisk-And-Wonder/Products/Anniversaries/anniversaries.html">Anniversaries</a></li>
