--- a/Support/orders.html
+++ b/Support/orders.html
@@ -69,7 +69,7 @@
                         <li><a href="/Ben-s-Whisk-And-Wonder/index.html">Home</a></li>
 
                         <div class="dropdown">
-                            <li><a href="/Ben-s-Whisk-And-Wonder/Products/">Products</a></li>
+                            <li><a href="#">Products</a></li>
 
                             <div class="dropdown-content">
                                  <li><a href="/Ben-s-Whisk-And-Wonder/Products/Birthdays/birthdays.html">Birthdays</a></li>
