--- a/About Us/story.html
+++ b/About Us/story.html
@@ -70,7 +70,7 @@
                         <li><a href="/Ben-s-Whisk-And-Wonder/index.html">Home</a></li>
 
                         <div class="dropdown">
-                            <li><a href="">Products</a></li>
+                            <li><a href="#">Products</a></li>
 
                             <div class="dropdown-content">
                                 <li><a href="/Ben-s-Whisk-And-Wonder/Products/Birthdays/birthdays.html">Birthdays</a></li>
