--- a/Support/orders.html
+++ b/Support/orders.html
@@ -54,7 +54,7 @@
                             <li><a href="/Ben-s-Whisk-And-Wonder/Support/orders.html">Orders &Payment</a></li>
                         </ul>
 
-                        <a href="#">Contact</a>
+                        <a href="/Ben-s-Whisk-And-Wonder/Contact us/contact.html">Contact</a>
                     </div>
 
                     <!-- Use any element to open the sidenav -->
