--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                             <li><a href="/Ben-s-Whisk-And-Wonder/Support/orders.html">Orders &Payment</a></li>
                         </ul>
 
-                        <a href="#">Contact</a>
+                        <a href="/Ben-s-Whisk-And-Wonder/Contact us/contact.html">Contact</a>
                     </div>
 
                     <!-- Use any element to open the sidenav -->
@@ -68,7 +68,7 @@
                         <li><a href="/Ben-s-Whisk-And-Wonder/index.html">Home</a></li>
 
                         <div class="dropdown">
-                            <li><a href="#">Products</a></li>
+                            <li><a href="/Ben-s-Whisk-And-Wonder/Products/">Products</a></li>
 
                             <div class="dropdown-content">
                                    <li><a href="/Ben-s-Whisk-And-Wonder/Products/Birthdays/birthdays.html">Birthdays</a></li>
